methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: not found: value getColeurSol
  if (getColeurSol() == "Color.green") {
      ^