methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur())
    return false
  avance()
  if (getColeurSol() == "Color.green") {
    return true
  }
  return false
}